# hcsshim

./: .gitignore
cmd/containerd-runhcs-shim-v1/: vendor.conf
cmd/containerd-shim-runhcs-v1/: service_internal.go
internal/computecore/: computecore.go  operation.go  system.go  zsyscall_windows.go
internal/computestorage/: computestorage.go  zsyscall_windows.go
internal/hcs/: process.go  service.go  system.go  waithelper.go
internal/hcsoci/: create.go  hcsdoc_lcow.go  hcsdoc_wcow.go  layers.go  network.go  resources.go  resources_lcow.go  resources_wcow.go
internal/uvm/: create_lcow.go  network.go  plan9.go  scsi.go  start.go  terminate.go  types.go  vpmem.go
rust/: Cargo.toml
rust/computecore/: Cargo.toml
rust/computecore/src/: lib.rs
rust/computecore/src/schema/: mod.rs
rust/computecore/src/schema/common/: mod.rs
rust/computecore/src/schema/common/resources/: mod.rs
rust/computecore/src/schema/containers/: mod.rs
rust/computecore/src/schema/containers/hns/: mod.rs
rust/computecore/src/schema/containers/vm_hosted/: mod.rs
rust/computecore/src/schema/devices/: mod.rs
rust/computecore/src/schema/devices/battery/: mod.rs
rust/computecore/src/schema/devices/bios/: mod.rs
rust/computecore/src/schema/devices/chipset/: mod.rs
rust/computecore/src/schema/devices/crash_dump/: mod.rs
rust/computecore/src/schema/devices/dynamic_memory/: mod.rs
rust/computecore/src/schema/devices/epci/: mod.rs
rust/computecore/src/schema/devices/epci2/: mod.rs
rust/computecore/src/schema/devices/gpup/: mod.rs
rust/computecore/src/schema/devices/guest_state/: mod.rs
rust/computecore/src/schema/devices/ic/: mod.rs
rust/computecore/src/schema/devices/lm_test_vdev/: mod.rs
rust/computecore/src/schema/devices/manifest/: mod.rs
rust/computecore/src/schema/devices/migrating_vdev/: mod.rs
rust/computecore/src/schema/devices/networking/: mod.rs
rust/computecore/src/schema/devices/rdp/: mod.rs
rust/computecore/src/schema/devices/serial/: mod.rs
rust/computecore/src/schema/devices/storage/: mod.rs
rust/computecore/src/schema/devices/storage/synth_fc/: mod.rs
rust/computecore/src/schema/devices/video/: mod.rs
rust/computecore/src/schema/devices/virtio_serial/: mod.rs
rust/computecore/src/schema/devices/vmbus/: mod.rs
rust/computecore/src/schema/devices/vpci/: mod.rs
rust/computecore/src/schema/umed/: mod.rs
rust/computecore/src/schema/umed/nvme_direct2/: mod.rs
rust/computecore/src/schema/virtual_machine/: mod.rs
rust/computecore/src/schema/virtual_machine/periodic_logging/: mod.rs
rust/computecore/src/schema/vm_worker_process/: mod.rs
rust/computecore/src/schema/vm_worker_process/pci/: mod.rs
rust/computecore/src/schema/vm_worker_process/summary/: mod.rs
rust/computenetwork/: Cargo.toml
rust/computenetwork/src/: lib.rs
rust/computenetwork/src/schema/: mod.rs
rust/computenetwork/src/schema/common/: mod.rs
rust/computenetwork/src/schema/common_policy/: mod.rs
rust/computenetwork/src/schema/global/: mod.rs
rust/computenetwork/src/schema/guest_network_service/: mod.rs
rust/computenetwork/src/schema/load_balancer/: mod.rs
rust/computenetwork/src/schema/namespace/: mod.rs
rust/computenetwork/src/schema/network/: mod.rs
rust/computenetwork/src/schema/network/endpoint/: mod.rs
rust/computenetwork/src/schema/network/endpoint/policy/: mod.rs
rust/computenetwork/src/schema/network/endpoint/policy/encryption/: mod.rs
rust/computenetwork/src/schema/network/guest/: mod.rs
rust/computenetwork/src/schema/network/guest/endpoint/: mod.rs
rust/computenetwork/src/schema/network/guest/namespace/: mod.rs
rust/computenetwork/src/schema/network/policy/: mod.rs
rust/computenetwork/src/schema/request/: mod.rs
rust/computenetwork/src/schema/response/: mod.rs
rust/computestorage/: Cargo.toml
rust/computestorage/src/: lib.rs
rust/containerd-api/: Cargo.toml  build.rs
rust/containerd-api/src/: lib.rs  types.rs
rust/containerd-api/src/runtime/: mod.rs
rust/containerd-api/src/runtime/sandbox/: mod.rs  v1.rs
rust/containerd-api/src/task/: mod.rs  v3.rs
rust/containerd-api/src/v1/: mod.rs  types.rs
rust/containerd-shim-process-v2/: Cargo.toml
rust/containerd-shim-process-v2/src/: main.rs  oci.rs  service.rs
rust/containerd-shim-process-v2/src/cmd/: delete.rs  mod.rs  serve.rs  start.rs
rust/named_pipe_connector/: Cargo.toml
rust/named_pipe_connector/src/: client.rs  lib.rs  server.rs
rust/oci-spec/: Cargo.toml
rust/oci-spec/src/: lib.rs  runtime.rs
rust/virtualdisk/: Cargo.toml
rust/virtualdisk/src/: lib.rs
