# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
edition.workspace = true
rust-version.workspace = true
name = "virtualdisk"
version = "0.1.0"

[dependencies]
tokio.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_Vhd",
    "Win32_System_IO",
] }

[lints]
workspace = true
